Cleaned up and removed old native lib loader